chore: deploy businessinfinity changes

--- a/_sass/pages/_business-infinity.scss
+++ b/_sass/pages/_business-infinity.scss
@@ -21,18 +21,18 @@
       @include text-center;
 
       .business-tabs-list {
-        @extend .nav-alias; // No mixin available
-        @extend .nav-pills-alias; // No mixin available
+  // @extend .nav-alias; // Removed: selector not defined
+  // @extend .nav-pills-alias; // Removed: selector not defined
         @include justify-content(center);
         @include mar-b(4);
 
         .business-tab-item {
-          @extend .nav-item-alias; // No mixin available
+          // @extend .nav-item-alias; // Removed: selector not defined
           @include mar-x(2);
 
           .business-tab-link {
-            @extend .btn-alias; // No mixin available
-            @extend .btn-outline-primary-alias; // No mixin available
+            // @extend .btn-alias; // Removed: selector not defined
+            // @extend .btn-outline-primary-alias; // Removed: selector not defined
             @include pad-x(4);
             @include pad-y(2);
 
