Update links and constrast

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -5,6 +5,7 @@
 @import "components/ui-utilities";
 @import "components/boardroom/main";
 @import "components/boardroom-new";
+@import "components/quick-links";
 
 // Pages
 @import "pages/index";
@@ -37,6 +38,7 @@
 @import "pages/client";
 @import "pages/roadmap";
 @import "pages/website";
+@import "pages/sitemap";
 
 // Sections
 @import "sections/business-infinity";
