--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -1,3 +1,9 @@
 // Main entry point for all SCSS styles
 // This file imports all component and page-specific styles
 
+// Components
+@import "components/ui-utilities";
+@import "components/boardroom/main";
+@import "components/boardroom-new";
+@import "components/quick-links";
+
