--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -7,3 +7,36 @@
 @import "components/boardroom-new";
 @import "components/quick-links";
 
+// Pages
+@import "pages/index";
+@import "pages/boardroom";
+@import "pages/boardroom2";
+@import "pages/business-infinity";
+@import "pages/entrepreneur";
+@import "pages/privacy-policy";
+@import "pages/startup";
+@import "pages/startup1";
+@import "pages/startup2";
+@import "pages/chat";
+@import "pages/profiles";
+@import "pages/mentor";
+@import "pages/about";
+@import "pages/features";
+@import "pages/features2";
+@import "pages/trust";
+@import "pages/enterprise";
+@import "pages/network";
+@import "pages/pitch";
+@import "pages/pitch1";
+@import "pages/framework";
+@import "pages/bmc";
+@import "pages/dashboard";
+@import "pages/mcp-access-control";
+@import "pages/mentor-mode";
+@import "pages/onboarding";
+@import "pages/conversations";
+@import "pages/client";
+@import "pages/roadmap";
+@import "pages/website";
+@import "pages/sitemap";
+
