--- a/_includes/boardroom/chat-area.html
+++ b/_includes/boardroom/chat-area.html
@@ -1,6 +1,6 @@
-<section id="chatArea" class="boardroom-chat-area" aria-label="Chat Area">
+<section id="chatArea" class="boardroom-chat-area" aria-label="Chat Area" data-boardroom-region="chat">
   {% include boardroom/chat-area/header.html %}
-  <section class="boardroom-chat-messages" id="chatMessages" aria-label="Chat Messages">
+  <section class="boardroom-chat-messages" id="chatMessages" aria-label="Chat Messages" data-boardroom-region="messages">
     <!-- Chat messages will be injected here by JavaScript -->
     {% include boardroom/chat-area/empty-state.html %}
   </section>
