--- a/_includes/boardroom/members-sidebar.html
+++ b/_includes/boardroom/members-sidebar.html
@@ -1,8 +1,8 @@
-<aside id="membersSidebar" class="boardroom-members-sidebar" aria-label="Members Sidebar">
+<aside id="membersSidebar" class="boardroom-members-sidebar" aria-label="Members Sidebar" data-boardroom-region="members">
   {% include boardroom/members-sidebar/header.html %}
   <section class="boardroom-members-section" id="members">
     {% include boardroom/members-sidebar/search-form.html %}
-    <ul class="boardroom-members-list" role="list" id="membersListContainer">
+    <ul class="boardroom-members-list" role="list" id="membersListContainer" data-boardroom-region="members-list">
       <!-- Members will be injected here by JavaScript -->
     </ul>
     {% include boardroom/members-sidebar/empty-state.html %}
