--- a/_sass/pages/_index.scss
+++ b/_sass/pages/_index.scss
@@ -4,7 +4,7 @@
 
 // Boardroom page root
 .boardroom-container {
-  @include container-fluid;
+  @include make-container();
 }
 
 .boardroom-section {
@@ -12,7 +12,7 @@
 }
 
 .boardroom-container-fluid {
-  @include container-fluid;
+  @include make-container();
 }
 
 .boardroom-main-row {
