--- a/_sass/pages/_index.scss
+++ b/_sass/pages/_index.scss
@@ -8,7 +8,7 @@
 }
 
 .boardroom-section {
-  @include row;
+  @include make-row();
 }
 
 .boardroom-container-fluid {
@@ -16,7 +16,7 @@
 }
 
 .boardroom-main-row {
-  @include row;
+  @include make-row();
 }
 
 // Toggle strip
