--- a/_sass/pages/_index.scss
+++ b/_sass/pages/_index.scss
@@ -25,20 +25,20 @@
   @include flex-direction(column);
   @include align-items(center);
   @include bg-dark;
-  padding-top: $sp-2; // fallback: uses spacing variable; replace if project uses different spacing token
-  padding-bottom: $sp-2;
+  padding-top: $spacer * 2; // fallback: uses spacing variable; replace if project uses different spacing token
+  padding-bottom: $spacer * 2;
 }
 
 .boardroom-toggle-members-btn {
   @include btn;
   @include btn-outline-light;
-  margin-bottom: $sp-2;
+  margin-bottom: $spacer * 2;
 }
 
 .boardroom-other-action-btn {
   @include btn;
   @include btn-outline-secondary;
-  margin-bottom: $sp-2;
+  margin-bottom: $spacer * 2;
 }
 
 .boardroom-members-sidebar-strip-spacer {
@@ -46,7 +46,7 @@
 }
 
 .boardroom-members-sidebar-toggle-icon {
-  margin-top: $sp-2;
+  margin-top: $spacer * 2;
 }
 
 // Members sidebar
@@ -172,25 +172,25 @@
 
 .boardroom-message-input-avatar {
   @include border-radius(50%);
-  margin-right: $sp-2;
+  margin-right: $spacer * 2;
   border: 1px solid rgba($border-color, 0.08);
 }
 
 .boardroom-message-input-field {
   @include form-control;
-  margin-right: $sp-2;
+  margin-right: $spacer * 2;
 }
 
 .boardroom-message-input-attach {
   @include btn;
   @include btn-link;
-  margin-right: $sp-2;
+  margin-right: $spacer * 2;
 }
 
 .boardroom-message-input-emoji {
   @include btn;
   @include btn-link;
-  margin-right: $sp-2;
+  margin-right: $spacer * 2;
 }
 
 .boardroom-message-input-send {
