--- a/_sass/pages/_index.scss
+++ b/_sass/pages/_index.scss
@@ -30,13 +30,13 @@
 }
 
 .boardroom-toggle-members-btn {
-  @include btn;
+  @include button-size(0.375rem, 0.75rem, 1rem, 0.25rem);
   @include btn-outline-light;
   margin-bottom: $spacer * 2;
 }
 
 .boardroom-other-action-btn {
-  @include btn;
+  @include button-size(0.375rem, 0.75rem, 1rem, 0.25rem);
   @include btn-outline-secondary;
   margin-bottom: $spacer * 2;
 }
@@ -72,7 +72,7 @@
 }
 
 .boardroom-invite-member-btn {
-  @include btn;
+  @include button-size(0.375rem, 0.75rem, 1rem, 0.25rem);
   @include btn-primary;
 }
 
@@ -182,18 +182,18 @@
 }
 
 .boardroom-message-input-attach {
-  @include btn;
+  @include button-size(0.375rem, 0.75rem, 1rem, 0.25rem);
   @include btn-link;
   margin-right: $spacer * 2;
 }
 
 .boardroom-message-input-emoji {
-  @include btn;
+  @include button-size(0.375rem, 0.75rem, 1rem, 0.25rem);
   @include btn-link;
   margin-right: $spacer * 2;
 }
 
 .boardroom-message-input-send {
-  @include btn;
+  @include button-size(0.375rem, 0.75rem, 1rem, 0.25rem);
   @include btn-primary;
 }
