--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -39,6 +39,8 @@
 @import "pages/roadmap";
 @import "pages/website";
 @import "pages/sitemap";
+@import "pages/monitor";
+@import "pages/agents";
 
 // Sections
 @import "sections/business-infinity";
