--- a/_sass/pages/_index.scss
+++ b/_sass/pages/_index.scss
@@ -31,7 +31,7 @@
 
 .boardroom-toggle-members-btn {
   @include button-size(0.375rem, 0.75rem, 1rem, 0.25rem);
-  @include btn-outline-light;
+  @include button-variant(transparent, $white);
   margin-bottom: $spacer * 2;
 }
 
