--- a/_sass/pages/_index.scss
+++ b/_sass/pages/_index.scss
@@ -37,7 +37,8 @@
 
 .boardroom-other-action-btn {
   @include button-size(0.375rem, 0.75rem, 1rem, 0.25rem);
-  @include btn-outline-secondary;
+  
+@include button-outline-variant($secondary, $color-contrast-dark);
   margin-bottom: map-get($spacers, 2);
 }
 
